# gist--per-request-state

./: Dockerfile  README.md  docker-compose.yaml  request-in-parallel.sh
app/: app-api.py  app-main.py  pyproject.toml
app/lib/: timer.py
